closing feature #4371, managing high level encryption by FormEncryptionContentIterator.java data of encrypted forms are decrypted/encrypted when cipher key is renewed

--- a/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
@@ -94,3 +94,5 @@ form.EX_CANT_GET_FULL_PATH = Failed to get the full path of the axis value (valu
 
 form.EX_CLONE_FAILURE = Failed to clone the form's WYSIWYG fields
 form.EX_CLONE_FAILURE = Failed to merge the form's WYSIWYG fields
+
+form.ERROR_DURING_ENCRYPTION = An error has occurred while processing the encryption service
