--- a/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
@@ -94,3 +94,5 @@ form.EX_CANT_GET_FULL_PATH = Impossible de r\u00e9cup\u00e9rer le chemin complet
 
 form.EX_CLONE_FAILURE = Impossible de cloner les champs WYSIWYG
 form.EX_MERGE_FAILURE = Impossible de fusionner les champs WYSIWYG
+
+form.ERROR_DURING_ENCRYPTION = Une erreur est survenue pendant le traitement du service de cryptage
