feature #3756 :  Add the name of the domain to which the user belongs in the user profile page

--- a/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_de.properties
@@ -34,3 +34,4 @@ JOP.profile = Profil
 JOP.instance = Instanz
 PDCSubscription.show = Seine Hauptinteressen
 JOP.silverPassword = Silverpeas Passwort
+JOP.domain=Domain
