--- a/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
@@ -31,5 +31,6 @@ JOP.spaces = Manage spaces
 JOP.profiles = Profile membership
 JOP.profile = Profile
 JOP.instance = Instance
-PDCSubscription.show = Show user subscriptions for taxonomy 
+PDCSubscription.show = Show user subscriptions for taxonomy
 JOP.silverPassword = Silverpeas password
+JOP.domain=Domain
