--- a/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_fr.properties
@@ -31,5 +31,6 @@ JOP.spaces = Espaces g&eacute;rables
 JOP.profiles = Profils d'appartenance
 JOP.profile = Profil
 JOP.instance = Instance
-PDCSubscription.show = Ses centres d'intérêt
+PDCSubscription.show = Ses centres d'int\u00e9r\u00eat
 JOP.silverPassword = Mot de passe Silverpeas
+JOP.domain=Domaine
