Feature #3447 : File Upload Plugin - adding jQuery file upload plugin - adding view generator tag that handles the use of the jQuery file upload plugin - adding manager to retrieve uploaded files on server side

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -335,6 +335,18 @@ GML.user.account.state.DELETED=Deleted account
 GML.user.lastConnection = Last connection
 
 # Common messages
+GML.upload.choose.browse=Browse...
+GML.upload.choose.file=Choose file
+GML.upload.choose.files=Choose files
+GML.upload.dragAndDrop.file=Drop here the file
+GML.upload.dragAndDrop.files=Drop here the files
+GML.upload.sending.file=Sending the file *...
+GML.upload.sending.files=Sending * files...
+GML.upload.warning=Files are being upload...<br/>Thank you for your patience.
+GML.upload.warning.file.limit=It is not possible to send more than one file.
+GML.upload.warning.files.limit=It is not possible to send more than * files.
+GML.upload.warning.file.limit.reached=You have reached the limit of one file.
+GML.upload.warning.files.limit.reached=You have reached the limit of * files.
 GML.validation.create=The informations have been well recorded.
 GML.validation.update=The informations have been well updated.
 GML.validation.delete=The informations have been well deleted.
