Feature 82: Updating delete localized file button Adding confirmation button Using new function tld for Silverpeas

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -80,7 +80,8 @@ attachment.share = Share this file
 attachment.checkOutAndDownload = Lock and download
 attachment.checkOutAndEditOnline = Edit online
 
-attachment.dialog.delete = Delete this file ?
-attachment.dialog.checkout.nok = File already reserved or error during reservation
+attachment.dialog.delete=Delete this file ?
+attachment.dialog.checkout.nok=File already reserved or error during reservation
+attachment.dialog.delete.lang=Delete the file for the selected language ?
 attachment.dialog.comment=Comments
 attachment.revert=Revert my modifications
