--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
@@ -79,5 +79,6 @@ attachment.checkOutAndEditOnline = Editer en ligne
 
 attachment.dialog.delete = Supprimer le fichier ?
 attachment.dialog.checkout.nok = Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 ou erreur lors de la r\u00e9servation
+attachment.dialog.delete.lang=Supprimer le fichier dans la langue s\u00e9lectionn\u00e9e ?
 attachment.dialog.comment=Commentaires
 attachment.revert=Abandonner mes modifications
