integrating feature #82 : improving UI

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -49,14 +49,11 @@ lier = Link
 downloadInProgress = Upload in progress...
 allVersions = All versions...
 
-
 attachment.version.label=Type of version
 attachment.version_public.label=Public
 attachment.version_wip.label=Work
 
 CopyLink = To copy the link to this file : Right click then 'Copy shortcut'
-
-attachment.SameFileNameAlreadyCheckout = You  have already checked out a file with the same name !<br>To avoid overwriting modifications, you can not check out simultaneously two files with the same name.
 
 attachment.notifSubjectLib = Reserved file : was unlocked
 attachment.notifSubjectExpiry = Reserved file : reservation expires tomorrow
@@ -66,10 +63,9 @@ attachment.notifUserExpiry = reservation expires tomorrow
 attachment.notifUserAlert = reservation will soon expire
 attachment.notifUserLib = has expired and was unlocked
 
-attachment.suppressionWhichTranslations = The file "*" you want to remove has several translations.<br/>Which translation do you want to remove?
+attachment.suppressionWhichTranslations = The file you want to remove has several translations.<br/>Which translation(s) do you want to remove?
 
 attachment.suppressionConfirmation = Are you sure to want to remove the file 
-attachment.allTranslations = All translations
 
 attachment.warning.checkin.locked=The file is being edited online.<br/>Close it before releasing it.
 
@@ -80,8 +76,12 @@ attachment.share = Share this file
 attachment.checkOutAndDownload = Lock and download
 attachment.checkOutAndEditOnline = Edit online
 
-attachment.dialog.delete=Delete this file ?
+attachment.dialog.add = Adding a file
+attachment.dialog.delete=Deleting the file
+attachment.dialog.update=Updating the file
+attachment.dialog.checkin = Releasing the file
 attachment.dialog.checkout.nok=File already reserved or error during reservation
 attachment.dialog.delete.lang=Delete the file for the selected language ?
 attachment.dialog.comment=Comments
 attachment.revert=Revert my modifications
+attachment.dialog.button.deleteAll = Delete all
