--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
@@ -50,8 +50,6 @@ confirm.checkin.message=Wollen Sie die \u00c4nderungen speichern?
 
 CopyLink = Zum Kopieren des Links in diese Datei: Rechtsklick, dann 'Verkn\u00fcpfung kopieren'
 
-attachment.SameFileNameAlreadyCheckout = Sie haben bereits eine Datei mit dem gleichen Namen reserviert!<br>Um zu verhindern, dass eventuelle \u00c4nderungen \u00fcberschrieben werden, k\u00f6nnen Sie nicht gleichzeitig zwei Dateien mit dem gleichen Namen reservieren.
-
 # A mettre \u00e0 jour dans le multilang general 
 modifier = \u00c4ndern 
 supprimer = L\u00f6schen 
@@ -78,16 +76,18 @@ attachment.notifUserExpiry = l\u00e4uft morgen ab
 attachment.notifUserAlert = l\u00e4uft bald ab
 attachment.notifUserLib = ist abgelaufen und wurde freigegeben
 
-attachment.suppressionWhichTranslations = Die Datei "*" Die Sie l\u00f6schen wollen hat mehrere \u00dcbersetzungen.<br/>Was m\u00f6chten Sie l\u00f6schen ?
+attachment.suppressionWhichTranslations = Die Datei Die Sie l\u00f6schen wollen hat mehrere \u00dcbersetzungen.<br/>Was m\u00f6chten Sie l\u00f6schen ?
 
 attachment.suppressionConfirmation = Sind Sie sicher die Datei l\u00f6schen zu wollen 
 
-attachment.allTranslations = Alle \u00dcbersetzungen
-
 attachment.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus. <br/>Bitte schlie\u00dfen Sie sie bevor Sie diese freigeben k\u00f6nnen.
 
-attachment.dialog.delete=L\u00f6schen Sie diese Datei?
+attachment.dialog.add = Adding a file
+attachment.dialog.delete=Deleting the file
+attachment.dialog.update=Updating the file
+attachment.dialog.checkin = Releasing the file
 attachment.dialog.checkout.nok=Bereits reserviert Datei oder Fehler bei der Reservierung
 attachment.dialog.delete.lang=L\u00f6schen Sie die Datei f\u00fcr die ausgew\u00e4hlte Sprache?
 attachment.dialog.comment=Kommentare
 attachment.revert=Revert meine \u00c4nderungen
+attachment.dialog.button.deleteAll = Delete all
