on feature #82, enhancing UI dialogs

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -82,6 +82,6 @@ attachment.dialog.update=Updating the file
 attachment.dialog.checkin = Releasing the file
 attachment.dialog.checkout.nok=File already reserved or error during reservation
 attachment.dialog.delete.lang=Delete the file for the selected language ?
-attachment.dialog.comment=Comments
+attachment.dialog.comment=Version comments
 attachment.revert=Revert my modifications
 attachment.dialog.button.deleteAll = Delete all
