--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
@@ -80,6 +80,6 @@ attachment.dialog.update = Modification du fichier
 attachment.dialog.checkin = Lib\u00e9ration du fichier
 attachment.dialog.checkout.nok = Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 ou erreur lors de la r\u00e9servation
 attachment.dialog.delete.lang=Supprimer le fichier dans la langue s\u00e9lectionn\u00e9e ?
-attachment.dialog.comment=Commentaires
+attachment.dialog.comment=Commentaires sur la version
 attachment.revert=Abandonner mes modifications
 attachment.dialog.button.deleteAll = Tout supprimer
