on feature #82, adding an explicit 'Add a file' creation action in files area

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
@@ -91,3 +91,5 @@ attachment.dialog.delete.lang=L\u00f6schen Sie die Datei f\u00fcr die ausgew\u00
 attachment.dialog.comment=Kommentare
 attachment.revert=Revert meine \u00c4nderungen
 attachment.dialog.button.deleteAll = Delete all
+
+attachment.add = Add a file...
