--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -85,3 +85,5 @@ attachment.dialog.delete.lang=Delete the file for the selected language ?
 attachment.dialog.comment=Version comments
 attachment.revert=Revert my modifications
 attachment.dialog.button.deleteAll = Delete all
+
+attachment.add = Add a file...
