integrating feature #351 changing labels to make it more understandable

--- a/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_de.properties
@@ -38,10 +38,10 @@ confirmDeleteSubscription = Sind Sie sicher, die Auswahl l\u00f6schen zu wollen?
 Path = Meine Abonnemente
 
 SubscriptionType = Abonnement-Typ
-SubscriptionType.USER = Benutzer
-SubscriptionType.GROUP = Gruppe
-SubscriptionMethod.FORCED = (von einem anderen Benutzer)
-SubscriptionMethod.SELF_CREATION =
+SubscriptionType.USER = 
+SubscriptionType.GROUP = via group
+SubscriptionMethod.FORCED = Gezwungen
+SubscriptionMethod.SELF_CREATION = Einzelne
 Operations = Operationen
 
 pdc = Klassifizierungsplan
