--- a/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_en.properties
@@ -36,10 +36,10 @@ confirmDeleteSubscription = Do you really want to delete the selection ?
 Path = My subscriptions
 
 SubscriptionType = Subscription type
-SubscriptionType.USER = User
-SubscriptionType.GROUP = Group
-SubscriptionMethod.FORCED = (by another user)
-SubscriptionMethod.SELF_CREATION =
+SubscriptionType.USER = 
+SubscriptionType.GROUP = via group
+SubscriptionMethod.FORCED = Forced
+SubscriptionMethod.SELF_CREATION = Personal
 Operations = Operations
 
 pdc = Categorization
