--- a/config-core/src/main/config/properties/org/silverpeas/subscription/multilang/subscriptionBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/subscription/multilang/subscriptionBundle_en.properties
@@ -24,7 +24,7 @@
 subscription.panel.title=Subscription management
 subscription.panel.forced.modify=Modify forced subscriptions
 subscription.panel.forced.list=Forced subscriptions
-subscription.panel.selfCreation.list=Individual subscriptions
+subscription.panel.selfCreation.list=Personal subscriptions
 subscription.panel.selfCreation.list.help=These subscriptions can be changed only by the person who contracted
 subscription.panel.list.group={0} {0,choice, 1\#group| 1<groups}
 subscription.panel.list.user={0} {0,choice, 1\#user| 1<users}
